--- a/administrator/models/forms/revenuededuction.xml
+++ b/administrator/models/forms/revenuededuction.xml
@@ -45,6 +45,18 @@
                                                     
                                                     
                                                     filter="safehtml" /> 
+       
+       <field name="house_type"type="radio"
+               class="btn-group"
+            default="1"
+            label="COM_FM_FORM_LBL_REVENUEDEDUCTION_HOUSE_TYPE"
+            description="COM_FM_FORM_DESC_REVENUEDEDUCTION_HOUSE_TYPE" 
+        
+            option_on="Yes"
+            option_off="Yes">
+                <option value="1">Nhà cũ</option>
+                <option value="2">Nhà mới</option>
+        </field> 
 
        <field name="rent" type="text" size="40" class="inputbox"
                                                     
@@ -54,17 +66,7 @@
                                                     
                                                     
                                                     filter="safehtml" /> 
-       <field name="house_type"type="radio"
-               class="btn-group"
-            
-            label="COM_FM_FORM_LBL_REVENUEDEDUCTION_HOUSE_TYPE"
-            description="COM_FM_FORM_DESC_REVENUEDEDUCTION_HOUSE_TYPE" 
-        
-            option_on="Yes"
-            option_off="Yes">
-                <option value="1">Nhà cũ</option>
-                <option value="2">Nhà mới</option>
-        </field> 
+       
 
        <field name="detain_type" type="list"
                 
