--- a/administrator/models/forms/employeepayroll.xml
+++ b/administrator/models/forms/employeepayroll.xml
@@ -1,136 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
-    <fieldset>
+	<fieldset>
 
-        <field name="id" type="text" default="0" label="COM_FM_FORM_LBL_REVENUEDEDUCTION_ID"
-                     readonly="true" class="readonly"
-                     description="JGLOBAL_FIELD_ID_DESC" /> 
+              <field name="id" type="text" default="0" label="COM_FM_FORM_LBL_EMPLOYEEPAYROLL_ID"
+            readonly="true" class="readonly"
+            description="JGLOBAL_FIELD_ID_DESC" /> 
 
-        <field name="created_by" type="createdby" default="" 
-              label="COM_FM_FORM_LBL_REVENUEDEDUCTION_CREATED_BY"
-              description="COM_FM_FORM_DESC_REVENUEDEDUCTION_CREATED_BY"  /> 
+       <field name="created_by" type="createdby" default="" 
+            label="COM_FM_FORM_LBL_EMPLOYEEPAYROLL_CREATED_BY"
+            description="COM_FM_FORM_DESC_EMPLOYEEPAYROLL_CREATED_BY"  /> 
 
-        <field name="guid" type="text" size="40" class="inputbox"
+       <field name="guid" type="text" size="40" class="inputbox"
                                                     
-              label="COM_FM_FORM_LBL_REVENUEDEDUCTION_GUID"
-              description="COM_FM_FORM_DESC_REVENUEDEDUCTION_GUID" 
+            label="COM_FM_FORM_LBL_EMPLOYEEPAYROLL_GUID"
+            description="COM_FM_FORM_DESC_EMPLOYEEPAYROLL_GUID" 
                                                     
                                                     
                                                     
-              filter="safehtml" /> 
+                                                    filter="safehtml" /> 
 
-        <field name="employee_guid" type="foreignkey" class="inputbox"
-        label="COM_FM_FORM_LBL_REVENUEDEDUCTION_EMPLOYEE_GUID"
-        description="COM_FM_FORM_LBL_REVENUEDEDUCTION_GUID" input_type="list" table="#__hrm_employee" key_field="guid" value_field="fullname"   />  
+ <field name="employee_guid" type="foreignkey" class="inputbox"
+            label="COM_FM_FORM_LBL_EMPLOYEEPAYROLL_EMPLOYEE_GUID"
+            description="COM_FM_FORM_DESC_EMPLOYEEPAYROLL_EMPLOYEE_GUID" input_type="list" table="#__hrm_employee " key_field="guid" value_field="fullname" required="true" /> 
 
-        <field name="filter_employee_guid" type="sql" class="inputbox"
-              onchange="this.form.submit();" translate="true"
-              query="SELECT 0 AS `guid`, 'COM_FM_REVENUEDEDUCTIONS_EMPLOYEE_GUID_FILTER_DEFAULT_OPTION' AS `fullname` UNION SELECT `guid`, `fullname` AS val FROM `#__hrm_employee`" key_field="guid" value_field="fullname"
-        /> 
+       <field name="filter_employee_guid" type="sql" class="inputbox"
+            onchange="this.form.submit();" translate="true"
+            query="SELECT 0 AS `guid`, 'COM_FM_EMPLOYEEPAYROLLS_EMPLOYEE_GUID_FILTER_DEFAULT_OPTION' AS `fullname` UNION SELECT `guid`, `fullname` AS fullname FROM `#__hrm_employee`" key_field="guid" value_field="fullname"
+             /> 
 
-        <field name="pay_electricity" type="text" size="40" class="inputbox"
-                                                    
-              label="COM_FM_FORM_LBL_REVENUEDEDUCTION_PAY_ELECTRICITY"
-              description="COM_FM_FORM_DESC_REVENUEDEDUCTION_PAY_ELECTRICITY" 
-                                                    
-                                                    
-                                                    
-              filter="safehtml" /> 
+ <field name="department_guid" type="foreignkey" class="inputbox"
+            label="COM_FM_FORM_LBL_EMPLOYEEPAYROLL_DEPARTMENT_GUID"
+            description="COM_FM_FORM_DESC_EMPLOYEEPAYROLL_DEPARTMENT_GUID" input_type="list" table="#__hrm_departments" key_field="guid" value_field="title" /> 
 
-        <field name="water_charges" type="text" size="40" class="inputbox"
-                                                    
-              label="COM_FM_FORM_LBL_REVENUEDEDUCTION_WATER_CHARGES"
-              description="COM_FM_FORM_DESC_REVENUEDEDUCTION_WATER_CHARGES" 
-                                                    
-                                                    
-                                                    
-              filter="safehtml" /> 
-        <field name="house_type" type="radio"      
-               label="COM_FM_FORM_LBL_REVENUEDEDUCTION_HOUSE_TYPE"
-               description="COM_FM_FORM_DESC_REVENUEDEDUCTION_HOUSE_TYPE" 
-               class="btn-group"
-               default="1"
-               option_on="Yes"
-               option_off="Yes">
-            <option value="1">Nhà cũ</option>
-            <option value="2">Nhà mới</option>
-        </field> 
-        <field name="rent" type="text" size="40" class="inputbox"
-                                                    
-              label="COM_FM_FORM_LBL_REVENUEDEDUCTION_RENT"
-              description="COM_FM_FORM_DESC_REVENUEDEDUCTION_RENT" 
-                                                    
-                                                    
-                                                    
-              filter="safehtml" /> 
+       <field name="filter_department_guid" type="sql" class="inputbox"
+            onchange="this.form.submit();" translate="true"
+            query="SELECT 0 AS `guid`, 'COM_FM_EMPLOYEEPAYROLLS_DEPARTMENT_GUID_FILTER_DEFAULT_OPTION'  AS `val` UNION SELECT `guid`, `title` AS val FROM `#__hrm_departments`" key_field="guid" value_field="val"
+             /> 
 
-        <field name="detain_type" type="list"
-                
-              label="COM_FM_FORM_LBL_REVENUEDEDUCTION_DETAIN_TYPE"
-              description="COM_FM_FORM_DESC_REVENUEDEDUCTION_DETAIN_TYPE" 
-                
-                
-                
-              menu_published="0"
-              filter="raw"
-              option_on="Yes"
-              option_off="Yes">
-            <option value="1">Ngày lương</option>
-            <option value="2">Số tiền</option>
-        </field> 
-
-        <field name="detain" type="text" size="40" class="inputbox"
+       <field name="payroll" type="text" size="40" class="inputbox"
                                                     
-              label="COM_FM_FORM_LBL_REVENUEDEDUCTION_DETAIN"
-              description="COM_FM_FORM_DESC_REVENUEDEDUCTION_DETAIN" 
-              default="0" 
+            label="COM_FM_FORM_LBL_EMPLOYEEPAYROLL_PAYROLL"
+            description="COM_FM_FORM_DESC_EMPLOYEEPAYROLL_PAYROLL" 
                                                     
                                                     
-              filter="safehtml" /> 
+                                                    
+                                                    filter="safehtml" /> 
 
-        <field name="time_update" type="calendar" class="inputbox"
-        
-        
-              default="0000-00-00 00:00:00" 
-        
-              label="COM_FM_FORM_LBL_REVENUEDEDUCTION_TIME_UPDATE"
-              description="COM_FM_FORM_DESC_REVENUEDEDUCTION_TIME_UPDATE" 
-              format="%Y-%m-%d %H:%M:%S"
-              filter="safehtml" /> 
+         <field
+        name="state"
+        type="list"
+        label="JSTATUS"
+        description="JFIELD_PUBLISHED_DESC"
+        class="inputbox"
+        size="1"
+        default="1">
+        <option value="1">JPUBLISHED</option>
+        <option value="0">JUNPUBLISHED</option>
+        <option value="2">JARCHIVED</option>
+        <option value="-2">JTRASHED</option>
+    </field> 
 
-        <field
-            name="state"
-            type="list"
-            label="JSTATUS"
-            description="JFIELD_PUBLISHED_DESC"
-            class="inputbox"
-            size="1"
-            default="1">
-            <option value="1">JPUBLISHED</option>
-            <option value="0">JUNPUBLISHED</option>
-            <option value="2">JARCHIVED</option>
-            <option value="-2">JTRASHED</option>
-        </field> 
-
-        <field name="checked_out" type="hidden" filter="unset" />
+                        <field name="checked_out" type="hidden" filter="unset" />
         <field name="checked_out_time" type="hidden" filter="unset" /> 
 
-    </fieldset> 
+ </fieldset> 
 
-    <fieldset 
-        name="accesscontrol">
-        <field name="asset_id" type="hidden" filter="unset" />
-        <field name="rules"
-                              type="rules"
-                              label="JFIELD_RULES_LABEL"
-                              translate_label="false"
-                              filter="rules"
-                              validate="rules"
-                              class="inputbox"
-                              component="com_fm"
-                              section="revenuededuction"
-        />
+ <fieldset 
+                        name="accesscontrol">
+                       <field name="asset_id" type="hidden" filter="unset" />
+                       <field name="rules"
+                            type="rules"
+                            label="JFIELD_RULES_LABEL"
+                            translate_label="false"
+                            filter="rules"
+                            validate="rules"
+                            class="inputbox"
+                            component="com_fm"
+                            section="employeepayroll"
+                        />
 
-    </fieldset>
+	</fieldset>
 
 </form>
